--- a/plugin.xml
+++ b/plugin.xml
@@ -1,32 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.4"?>
+<!--
+ Copyright (c) 2010 Kathryn Huxtable
+ This program and the accompanying materials are made available under
+ the terms of the Eclipse Public License v1.0 which accompanies this
+ distribution, and is available at
+
+   http://www.eclipse.org/legal/epl-v10.html
+
+ Unless required by applicable law or agreed to in writing, software
+ distributed under the License is distributed on an "AS IS" BASIS,
+ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ See the License for the specific language governing permissions and
+ limitations under the License.
+-->
 <plugin>
 
-   <extension
-         point="org.eclipse.ui.commands">
-      <command
-            name="Set Document Command"
-            categoryId="org.kathrynhuxtable.eclipse.plugin.setmacdocument.commands.category"
-            id="org.kathrynhuxtable.eclipse.plugin.setmacdocument.commands.setDocumentCommand">
-      </command>
-   </extension>
-   
-   <extension
-         point="org.eclipse.ui.handlers">
-      <handler
-            commandId="org.kathrynhuxtable.eclipse.plugin.setmacdocument.commands.setDocumentCommand"
-            class="org.kathrynhuxtable.eclipse.plugin.setmacdocument.handlers.SetMacDocumentHandler">
-      </handler>
-   </extension>
-   
-   <extension
-         point="org.eclipse.ui.bindings">
-      <key
-            commandId="org.kathrynhuxtable.eclipse.plugin.setmacdocument.commands.setDocumentCommand"
-            contextId="org.eclipse.ui.contexts.window"
-            sequence="M1+6"
-            schemeId="org.eclipse.ui.defaultAcceleratorConfiguration">
-      </key>
+   <extension point="org.eclipse.ui.startup">
+      <startup class="org.kathrynhuxtable.eclipse.plugin.setmacdocument.handlers.SetMacDocumentHandler"/>
    </extension>
 
 </plugin>
