Moved SetMacDocumentHandler to main package. Added some comments. Added package restriction for Mac OS X Cocoa on Intel. Factored actual code to set the represented filename into new class CocoaRepresentedFilename.

--- a/plugin.xml
+++ b/plugin.xml
@@ -17,7 +17,7 @@
 <plugin>
 
    <extension point="org.eclipse.ui.startup">
-      <startup class="org.kathrynhuxtable.eclipse.plugin.setmacdocument.handlers.SetMacDocumentHandler"/>
+      <startup class="org.kathrynhuxtable.eclipse.plugin.setmacdocument.SetMacDocumentHandler"/>
    </extension>
 
 </plugin>
