--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>set-mac-document</name>
+	<name>eclipse-cocoa-set-represented-filename</name>
 	<comment></comment>
 	<projects>
 	</projects>
