--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.kathrynhuxtable.eclipse.plugin</groupId>
-	<artifactId>eclipse-cocoa-set-represented-filename</artifactId>
+	<artifactId>eclipse-cocoa-set-represented-filename-parent</artifactId>
 	<version>0.1.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>Eclipse Cocoa plugin to set Mac OS X represented filename for active file.</name>
@@ -28,7 +28,7 @@
 	<licenses>
 		<license>
             <name>Eclipse Public License Version 1.0</name>
-            <url>http://www.eclipse.org/legal/epl-v10.html</url>
+            <url>../LICENSE.html</url>
 			<distribution>repo</distribution>
 		</license>
 	</licenses>
