--- a/org.kathrynhuxtable.eclipse.cocoa_set_represented_filename_site/pom.xml
+++ b/org.kathrynhuxtable.eclipse.cocoa_set_represented_filename_site/pom.xml
@@ -4,18 +4,15 @@
 	<prerequisites>
 		<maven>2.2.1</maven>
 	</prerequisites>
-	
-    <parent>
-        <groupId>org.kathrynhuxtable.eclipse.plugin</groupId>
-        <artifactId>eclipse-cocoa-set-represented-filename-parent</artifactId>
-        <version>0.1.0</version>
-    </parent>
 
-    <groupId>org.kathrynhuxtable.eclipse.plugin.eclipse-cocoa-set-represented-filename</groupId>
-    <artifactId>site</artifactId>
+    <groupId>org.kathrynhuxtable.eclipse.cocoa_set_represented_filename</groupId>
+    <artifactId>org.kathrynhuxtable.eclipse.cocoa_set_represented_filename_site</artifactId>
+        <version>0.1.0</version>
     <packaging>pom</packaging>
     <name>Eclipse Cocoa plugin to set Mac OS X represented filename for active file.</name>
-
+    <description>Mac OS X Cocoa Eclipse 3.5/3.6 plugin to set the Mac represented document in the
+        window so that, among other things, DTerm works.</description>
+    <inceptionYear>2010</inceptionYear>
     <url>http://khuxtable.github.com/eclipse-cocoa-set-represented-filename</url>
     <licenses>
         <license>
@@ -24,6 +21,38 @@
             <distribution>repo</distribution>
         </license>
     </licenses>
+    <developers>
+        <developer>
+            <id>khuxtable</id>
+            <name>Kathryn Huxtable</name>
+            <email>kathryn@kathrynhuxtable.org</email>
+            <url>http://www.kathrynhuxtable.org</url>
+            <organization>kathrynhuxtable.org</organization>
+            <organizationUrl>http://www.kathrynhuxtable.org</organizationUrl>
+            <roles>
+                <role>architect</role>
+                <role>developer</role>
+            </roles>
+            <timezone>-6</timezone>
+        </developer>
+    </developers>
+    <organization>
+        <name>kathrynhuxtable.org</name>
+        <url>http://www.kathrynhuxtable.org</url>
+    </organization>
+    <issueManagement>
+        <system>GitHub</system>
+        <url>http://github.com/khuxtable/eclipse-cocoa-set-represented-filename/issues</url>
+    </issueManagement>
+    <mailingLists>
+        <mailingList>
+            <name>Kathryn Huxtable's Projects</name>
+            <subscribe>kathryn-huxtable-projects+subscribe@googlegroups.com</subscribe>
+            <unsubscribe>kathryn-huxtable-projects+unsubscribe@googlegroups.com</unsubscribe>
+            <post>kathryn-huxtable-projects@googlegroups.com</post>
+            <archive>http://groups.google.com/group/kathryn-huxtable-projects</archive>
+        </mailingList>
+    </mailingLists>
 
 	<build>
 		<plugins>
